api.yaml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata: 
  name: "api"
spec: 
  selector: 
    matchLabels: 
      app: "api"
  replicas: 4
  strategy: 
    type: "RollingUpdate"
    rollingUpdate: 
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template: 
    metadata: 
      labels: 
        app: "api"
    spec: 
      containers: 
        - 
          name: "api"
          image: "317685187249.dkr.ecr.us-east-1.amazonaws.com/k8snative:latest"
          imagePullPolicy: "IfNotPresent"
          ports: 
          - 
            containerPort: 2000
            name: "api"
      imagePullSecrets:
        - name: ecr-secret
