client.yaml
---
  apiVersion: "apps/v1"
  kind: "Deployment"
  metadata: 
    name: "client"
    
  spec: 
    selector: 
      matchLabels: 
        app: "client"
    replicas: 1
    strategy: 
      type: "RollingUpdate"
      rollingUpdate: 
        maxSurge: 1
        maxUnavailable: 1
    minReadySeconds: 5
    template: 
      metadata: 
        labels: 
          app: "client"
      spec: 
        containers: 
          - 
            name: "client"
            image: "317685187249.dkr.ecr.us-east-1.amazonaws.com/client:latest"
            imagePullPolicy: "IfNotPresent"
            
                            
            ports: 
              - 
                containerPort: 80
                name: "client"
        imagePullSecrets:
          - name: ecr-secret
                
          #  volumeMounts: 
          #    - 
          #      name: "client-persistent-storage"
          #      mountPath: "dist"
                
        #volumes: 
        #  - 
        #    name: "client-persistent-storage"
        #    persistentVolumeClaim: 
        #      claimName: "pvc-client-nginx"
