statefulset2.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mongodb
  template:
    metadata:
      labels:
        name: mongodb
    spec:
      volumes:
        - name: persistent-storage
          persistentVolumeClaim:
            claimName: ebs-claim
      containers:
        - name: mongodb
          image: mongo:4.2.3-bionic
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: persistent-storage
              mountPath: /data/db
