service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  type: NodePort  
  ports:
    - name: api
      port: 2000
      targetPort: 2000
      nodePort: 30089
