service-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
  labels:
    app: client
spec:
  selector:
    app: client
  type: NodePort  
  ports:
    - name: client
      port: 80
      targetPort: 80
      nodePort: 30010
